test/TestSuite/Syntax/Errors/eof_in_istring1.tjp
project test "Test" "1.0" 2009-08-25 +2m 

# MARK: error 5 eof_in_istring1
task t -8<-
   